cmake_minimum_required(VERSION 3.23)
project(cpp_playground)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_A ITP1/1_A.cpp)
add_executable(1_B ITP1/1_B.cpp)
add_executable(1_C ITP1/1_C.cpp)
add_executable(1_D ITP1/1_D.cpp)
add_executable(2_A ITP1/2_A.cpp)
add_executable(2_B ITP1/2_B.cpp)
add_executable(2_C ITP1/2_C.cpp)
add_executable(2_D ITP1/2_D.cpp)
add_executable(3_A ITP1/3_A.cpp)
add_executable(3_B ITP1/3_B.cpp)
add_executable(3_C ITP1/3_C.cpp)
add_executable(3_D ITP1/3_D.cpp)
add_executable(4_A ITP1/4_A.cpp)
add_executable(4_B ITP1/4_B.cpp)
add_executable(4_C ITP1/4_C.cpp)
add_executable(4_D ITP1/4_D.cpp)
add_executable(5_A ITP1/5_A.cpp)
add_executable(5_B ITP1/5_B.cpp)
add_executable(5_C ITP1/5_C.cpp)
add_executable(5_D ITP1/5_D.cpp)
add_executable(6_A ITP1/6_A.cpp)
add_executable(6_B ITP1/6_B.cpp)
add_executable(6_C ITP1/6_C.cpp)
add_executable(6_D ITP1/6_D.cpp)
add_executable(7_A ITP1/7_A.cpp)
add_executable(7_B ITP1/7_B.cpp)
add_executable(7_C ITP1/7_C.cpp)
add_executable(7_D ITP1/7_D.cpp)
add_executable(8_A ITP1/8_A.cpp)
add_executable(8_B ITP1/8_B.cpp)
add_executable(8_C ITP1/8_C.cpp)
add_executable(8_D ITP1/8_D.cpp)
add_executable(9_A ITP1/9_A.cpp)
add_executable(9_B ITP1/9_B.cpp)
add_executable(9_C ITP1/9_C.cpp)
add_executable(9_D ITP1/9_D.cpp)
add_executable(10_A ITP1/10_A.cpp)
add_executable(10_B ITP1/10_B.cpp)
add_executable(10_C ITP1/10_C.cpp)
add_executable(10_D ITP1/10_D.cpp)
